Loader and minor fixes

--- a/public/scss/_colors.scss
+++ b/public/scss/_colors.scss
@@ -1,6 +1,7 @@
 $dark: #1f1f1f;
 $grey: #383838;
 $light-white: #ffffffbb;
+$lighta-white: #ffffff99;
 $lighter-white: #ffffff66;
 $lightest-white: #ffffff33;
 $white: #fff;
