--- a/public/css/site.css
+++ b/public/css/site.css
@@ -370,6 +370,59 @@ textarea {
   padding: 3.2px 5.2px;
   border-radius: 4.8px; }
 
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out; }
+
+.loader {
+  color: #ffffffbb;
+  font-size: 5px;
+  margin: 45px auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
+
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0; }
+
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
+
+.loader:after {
+  left: 3.5em; }
+
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
+
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
+
 .empty {
   text-align: center;
   padding: 15vh 0; }
@@ -512,6 +565,12 @@ textarea {
     font-size: 1.25em; }
     .home-cta:hover {
       background-color: #007dfa; }
+  .home-ps {
+    width: 60%;
+    margin: 16px auto;
+    font-size: 0.8em;
+    line-height: 1.2em;
+    color: #ffffff99; }
   @media screen and (min-width: 700px) {
     .home {
       padding-top: 20vh; }
@@ -520,7 +579,9 @@ textarea {
         font-size: 5em; }
       .home-name {
         padding: 24px 32px 12px;
-        border-radius: 20px; } }
+        border-radius: 20px; }
+      .home-ps {
+        width: 20%; } }
 
 body {
   font-family: 'Circular Std', 'SF Pro Display';
